--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "description": "Generate random numbers with different distributions",
   "main": "index.js",
-  "repository": {},
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/SavagePixie/randtools"
+  },
   "files": [ "index.js", "custom.js", "normal.js", "uniform.js" ],
   "keywords": [
     "distribution",
