--- a/package.json
+++ b/package.json
@@ -19,5 +19,6 @@
     "uniform"
   ],
   "author": "SavagePixie",
-  "license": "MIT"
+  "license": "MIT",
+  "homepage": "https://github.com/SavagePixie/randtools#readme"
 }
